// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthJwtControllerV1 -> refresh (e2e) /auth/refresh (POST) V1 FAILURE should return UnauthorizedError if incorrect refreshToken 1`] = `
{
  "data": {
    "error": "Unauthorized",
  },
  "path": "/auth/refresh",
  "status": "fail",
  "statusCode": 401,
  "timestamp": Any<String>,
}
`;

exports[`AuthJwtControllerV1 -> refresh (e2e) /auth/refresh (POST) V1 SUCCESS should return both tokens if refresh token is still valid 1`] = `
{
  "data": {
    "access_token": Any<String>,
    "refresh_token": Any<String>,
  },
  "path": "/auth/refresh",
  "status": "success",
  "statusCode": 200,
  "timestamp": Any<String>,
}
`;
